# kbolt

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flows.md  kbolt.md
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  release.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: args.rs  lib.rs  main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: doctor.rs  engine.rs  error.rs  eval_import.rs  eval_store.rs  lib.rs  local.rs  lock.rs  profile.rs  schedule_state_store.rs  schedule_store.rs  schedule_support.rs
crates/core/src/config/: mod.rs  tests.rs
crates/core/src/engine/: eval_ops.rs  file_utils.rs  ignore_helpers.rs  ignore_ops.rs  path_utils.rs  schedule_ops.rs  schedule_run_ops.rs  schedule_status_ops.rs  scoring.rs  search_ops.rs  tests.rs  text_helpers.rs  update_ops.rs
crates/core/src/ingest/: canonical.rs  chunk.rs  code.rs  extract.rs  html.rs  markdown.rs  mod.rs  pdf.rs  plaintext.rs
crates/core/src/models/: artifacts.rs  chat.rs  completion.rs  embedder.rs  expander.rs  gateway.rs  gguf_tokenizer.rs  http.rs  inference.rs  local_expander.rs  local_gguf.rs  local_llama.rs  local_onnx.rs  local_reranker.rs  mod.rs  provider.rs  qmd_expander.rs  reranker.rs  tests.rs  text.rs  tiktoken_tokenizer.rs  tokenizer.rs  tokenizer_metrics.rs  variants_expander.rs
crates/core/src/models/providers/: hf.rs  mod.rs
crates/core/src/schedule_backend/: launchd.rs  mod.rs  systemd.rs
crates/core/src/storage/: mod.rs  tests.rs
crates/core/src/watch/: log.rs  mod.rs  runner.rs  scheduler.rs  service.rs  source.rs  state.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: lib.rs  protocol.rs  stdio.rs  test_support.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: doctor.rs  document.rs  error.rs  eval.rs  indexing.rs  lib.rs  local.rs  model.rs  schedule.rs  search.rs  space.rs  status.rs  watch.rs
crates/types/tests/: serde_roundtrip.rs
docs/: releasing.md
docs-site/: mkdocs.yml
docs-site/docs/: index.md  install.md  quickstart.md
docs-site/docs/concepts/: local-setup.md  platform-support.md  search-modes.md  spaces-and-collections.md
docs-site/docs/guides/: add-and-organize-content.md  exclude-files.md  keep-indexes-fresh.md  read-source-files.md  search-effectively.md  use-with-claude-desktop.md
docs-site/docs/operations/: data-locations.md  health-and-status.md  troubleshooting.md
docs-site/docs/reference/: cli-overview.md  mcp-tools.md
docs-site/docs/reference/cli/: content-management.md  eval.md  local-and-health.md  read-and-integration.md  schedule.md  search.md  watch.md
docs-site/docs/reference/config/: index-toml.md
docs/adr/: 0001-extraction-and-chunking.md  0002-role-inference-config.md  0003-provider-profiles-and-shared-local-inference.md
docs/performance/: 2026-03-24-search-speed-and-hot-paths.md
scripts/: install-hooks.sh
