[workspace]
members = ["crates/types", "crates/core", "crates/cli", "crates/mcp"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
dirs = "6.0"
fs2 = "0.4"
hf-hub = "0.4"
ignore = "0.4"
rusqlite = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tantivy = "0.24"
thiserror = "2.0"
toml = "0.9"
usearch = "2.23"
walkdir = "2.5"
