[package]
name = "kbolt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
kbolt-core = { path = "../core" }
kbolt-mcp = { path = "../mcp" }
kbolt-types = { path = "../types" }
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true

[dev-dependencies]
tempfile = "3.26"
