[package]
name = "kbolt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local-first retrieval engine"
repository.workspace = true
readme = "README.md"

[lib]
name = "kbolt_cli"

[[bin]]
name = "kbolt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
kbolt-core = { path = "../core", version = "0.1.5" }
kbolt-mcp = { path = "../mcp", version = "0.1.5" }
kbolt-types = { path = "../types", version = "0.1.5" }
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true

[dev-dependencies]
tempfile = "3.26"
