[package]
name = "kbolt-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dirs.workspace = true
kbolt-types = { path = "../types" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tantivy.workspace = true
thiserror.workspace = true
toml.workspace = true
usearch.workspace = true

[dev-dependencies]
tempfile = "3.26"
