[package]
name = "kbolt-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core engine for kbolt local-first retrieval"
repository.workspace = true
readme = "README.md"

[dependencies]
dirs.workspace = true
fs2.workspace = true
hf-hub.workspace = true
httpdate.workspace = true
ignore.workspace = true
kbolt-types = { path = "../types", version = "0.1.1" }
pulldown-cmark.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tantivy.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
usearch.workspace = true
ureq.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3.26"
