[package]
name = "kbolt-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP adapter for kbolt"
repository.workspace = true
readme = "README.md"

[dependencies]
kbolt-core = { path = "../core", version = "0.1.5" }
kbolt-types = { path = "../types", version = "0.1.5" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.26"
